
    o new function `seqSystem()`

    o allow "$dosage" in `seqGetData()` and `seqApply()` for the dosages of
      reference allele

    o accelerate `seqSetFilterChrom()` and allow a selection with
      multiple regions

    o new methods `\S4method{seqSetFilter}{SeqVarGDSClass, GRanges}()` and
      `\S4method{seqSetFilter}{SeqVarGDSClass, GRangesList}()`


CHANGES IN VERSION 1.10.0-1.10.6
-------------------------

    o the version number was bumped for the Bioconductor release version 3.2

    o fix a memory issue in `seqAlleleFreq()` when 'ref.allele' is a vector

    o `seqSetFilter()` allows numeric vectors in 'samp.sel' and 'variant.sel'

    o `seqSummary()` returns ploidy and reference

    o `seqStorage.Option()` controls the compression level of FORMAT/DATA

    o `seqVCF2GDS()` allows extract part of VCF files via 'start' and 'count'

    o `seqMerge()` combines multiple GDS files with the same samples

    o export methods for compatibility with VariantAnnotation

    o a new argument '.useraw' in `seqGetFilter()`

    o a new argument 'allow.duplicate' in `seqOpen()`

    o fix a bug in `seqParallel()`
      (https://github.com/zhengxwen/SeqArray/issues/11) and optimize
      its performance

    o 'gdsfile' could be NULL in `seqParallel()`


CHANGES IN VERSION 1.9.0-1.9.19
-------------------------

    o a new function `seqGDS2SNP()`

    o supported by the SNPRelate package

    o support `seqApply(..., margin="by.sample")`

    o new functions `seqOptimize()`, `seqMissing()`, `seqAlleleFreq()`,
      `seqNumAllele()` and `seqSetFilterChrom()`

    o "intersection" and "push+intersection" in `seqSetFilter()`

    o parallel implementation in `seqNumAllele()`, `seqMissing()` and
      `seqAlleleFreq()`

    o a new function `seqExport()`

    o new argument ".useraw" in `seqApply()`

    o fix a bug for duplicated "variant.id",
      https://github.com/zhengxwen/SeqArray/issues/7
