@@ -3,7 +3,7 @@ Type: Package
 Title: Big Data Management of Whole-genome Sequence Variant Calls
 Version: 1.11.16
 Date: 2016-03-16
-Depends: R (>= 2.15.0), gdsfmt (>= 1.7.13)
+Depends: R (>= 2.15.0), gdsfmt (>= 1.7.14)
 Imports: methods, S4Vectors, IRanges, GenomicRanges,
         SummarizedExperiment, Biostrings, VariantAnnotation
 LinkingTo: gdsfmt
