@@ -17,7 +17,9 @@ seqApply(gdsfile, var.name, FUN, margin=c("by.variant", "by.sample"),
     \item{FUN}{the function to be applied}
     \item{margin}{giving the dimension which the function will be applied
         over. E.g., for a matrix 1 indicates rows, 2 indicates columns}
-    \item{as.is}{returned value: a list, an integer vector, etc}
+    \item{as.is}{returned value: a list, an integer vector, etc;
+        \code{as.is} can be a \code{connection} object, returned from
+        \code{\link{file}()}}
     \item{var.index}{if \code{"none"}, call \code{FUN(x, ...)} without variable
         index; if \code{"relative"} or \code{"absolute"}, add an argument to
         the user-defined function \code{FUN} like \code{FUN(index, x, ...)}
@@ -87,6 +89,16 @@ seqApply(f, c(geno="genotype", phase="phase", qual="annotation/id",
 seqApply(f, "allele",
     FUN=function(x) length(unlist(strsplit(x,","))), as.is="integer")
 
+# output to a file
+fl <- file("tmp.txt", "w")
+seqApply(f, "genotype", FUN=sum, na.rm=TRUE, as.is=fl)
+close(fl)
+
+readLines("tmp.txt")
+seqApply(f, "genotype", FUN=sum, na.rm=TRUE, as.is="integer")
+# should be identical
+
+
 
 ################################################################
 # with an index of variant
@@ -135,6 +147,10 @@ seqApply(f, c(sample.id="sample.id", genotype="genotype"), FUN=print,
 
 # close the GDS file
 seqClose(f)
+
+
+# delete the temporary file
+unlink("tmp.txt")
 }
 
 \keyword{gds}
